--- a/neighborhood-watch/manifest.json
+++ b/neighborhood-watch/manifest.json
@@ -20,10 +20,11 @@
     },
     "content_scripts": [
         {
-          "js": ["scripts/popup.js", "scripts/highlight.js", "scripts/content.js"],
+          "js": ["scripts/popup.js", "scripts/content.js"],
           "matches": [
             "<all_urls>"
-          ]
+          ],
+          "run_at": "document_end"
         }
     ],
     "permissions": [
